# big_int

./: CMakeLists.txt  README.md
include/: big_int.h
src/: big_int.c  big_int_bi.c  big_int_si.c  big_int_ui.c
